# daily-profit-model

./: .env.example  .env.local.example  .gitignore  CONSOLIDATED_SYSTEM_GUIDE.md  DATABASE_IMMEDIATE_FIXES.md  DATABASE_SIMPLIFICATION_PLAN.md  DATABASE_SIMPLIFICATION_REVIEW.md  INTELLIGENT_HOURLY_REFACTOR_SUMMARY.md  N1_QUERY_FIX_DOCUMENTATION.md  OPTIMIZED_DATABASE_REVIEW_PROMPT.md  PARTITIONING_RECOMMENDATION.md  QUICK_START_GUIDE.md  README.md  SCHEMA_MANAGEMENT_RECOMMENDATIONS.md  SIMPLE_SCHEMA_MANAGEMENT.md  TRADE_RECONCILIATION_IMPLEMENTATION_SUMMARY.md  check_all_metrics.sql  check_hourly_details.sql  check_hourly_progress.sql  check_record_counts.py  error_handling_analysis.md  main.py  pyproject.toml  repomix-output.txt  test_intelligent_hourly_ingestion.py  test_metrics_fields.py
airflow/: Dockerfile  airflow.db  docker-compose.yml  docker-start.sh  simple_auth_manager_passwords.json.generated
airflow/dags/: airflow_dag.py  daily_profit_model_dag.py  test_connection_dag.py  trade_reconciliation_dag.py
examples/: data_validation_demo.py  enhanced_logging_demo.py
raw-data/plans/: Plans (10).csv  Plans (13).csv  Plans (15).csv  Plans (18).csv  Plans (21).csv  Plans (22).csv  Plans (24).csv  Plans (25).csv  Plans (27).csv  Plans (29).csv  Plans (3).csv  Plans (30).csv  Plans (33).csv  Plans (36).csv  Plans (39).csv  Plans (4).csv  Plans (40).csv  Plans (41).csv  Plans (6).csv  Plans (7).csv  Plans (9).csv
scripts/: _sync_db.sh  import_excluded_traders.py  security_audit.py  sync_and_run_feature_engineering.sh  sync_local_db.sh  test_sync_db.sh
src/.checkpoints/: trades_closed_checkpoint.json
src/data_ingestion/: __init__.py  base_ingester.py  discover_active_logins.py  ingest_accounts.py  ingest_accounts_enhanced.py  ingest_metrics.py  ingest_metrics_enhanced.py  ingest_metrics_intelligent.py  ingest_metrics_v2.py  ingest_plans.py  ingest_regimes.py  ingest_trades.py  ingest_trades_intelligent.py
src/data_quality/: maintain_trade_recon.py  trade_reconciliation.py  trade_reconciliation_production.py
src/db_schema/: MIGRATION_TO_ALEMBIC.md  README.md  models.py  schema.sql  schema_baseline.sql  setup_schema_functions.sql
src/feature_engineering/: README.md  __init__.py  add_targets_to_features.py  benchmark_performance.py  build_training_data.py  concatenate_training_chunks.py  dtype_utils.py  engineer_features.py  engineer_features_integrated.py  engineer_features_optimized.py  engineer_features_v2.py  feature_analysis.py  feature_catalog.md  feature_engineering.py  ft_build_feature_matrix.py  ft_feature_engineering.py  monitor_features.py  orchestrate_feature_engineering.py  pipeline_integration.py  prepare_data_streaming.py  test_feature_validation.py  test_optimization.py  utils.py
src/modeling/: OPTUNA_INTEGRATION.md  README.md  __init__.py  clean_parquet_files.py  confidence_intervals.py  diagnose_parquet_memory.py  fix_empty_columns.py  model_manager.py  model_monitoring.py  optimize_parquet_files.py  optuna_parallel_optimization.py  optuna_utils.py  optuna_visualization.py  predict_daily.py  quick_feature_selection.py  train_model.py  train_multi_model_ensemble.py  train_multi_model_ensemble_memory_opt.py  train_with_memory_optimization.py  train_with_optuna.py
src/pipeline_orchestration/: __init__.py  airflow_dag.py  health_checks.py  health_checks_v2.py  pipeline_state.py  retry_manager.py  run_pipeline.py  run_pipeline_intelligent.py  sla_monitor.py  test_jobs.py
src/preprocessing/: __init__.py  anomaly_detector.py  create_staging_snapshots.py  create_staging_snapshots_broken.py  create_staging_snapshots_simple.py  data_lineage.py  data_quality_alerts.py  data_quality_dashboard.py  data_quality_rules.py  data_quality_validation.py  data_validator.py  great_expectations_config.py  late_data_handler.py
src/utils/: __init__.py  alembic_schema_manager.py  api_client.py  config_validation.py  database.py  enhanced_alembic_schema_manager.py  generate_models.py  logging_aggregation_config.py  logging_config.py  logging_health_check.py  logging_infrastructure_readme.md  metrics.py  metrics_wrapper.py  migration_handler.py  partition_migration_manager.py  partitions.py  performance.py  query_performance.py  schema_manager.py  secrets_manager.py  test_utils.py
supabase/: config.toml
supabase/migrations/: 20250113080000_setup_pg_cron_partition_automation.sql  20250613042918_remote_schema.sql  20250613043306_enhanced_partition_functions.sql  20250613044542_table_conversion_functions.sql  20250613045712_fix_partition_conversion_date_types.sql  20250613050449_optimized_partition_conversion.sql  20250613051500_fix_copy_data_resume.sql  20250613055000_improved_partition_functions.sql  20250613060000_partition_cleanup_function.sql  20250613070000_consolidated_partition_system.sql  20250613080000_migrate_platform_to_integer.sql  20250613081000_add_raw_trades_open_primary_key.sql  20250613120000_trade_recon.sql  20250614040000_fix_feature_store_schema.sql  (+10 more)
tests/: check_hourly_dtypes.py  quick_verify_daily_metrics.py  test_accounts_ingester.py  test_alembic_schema_manager.py  test_api_client.py  test_data_integrity.py  test_data_structure_field_validation.py  test_data_validation.py  test_enhanced_risk_metrics.py  test_feature_engineering_batch_processing.py  test_feature_engineering_calculations.py  test_feature_engineering_config.py  test_feature_engineering_data_fetching.py  test_feature_engineering_integration.py  test_feature_matrix_integrity.py  test_feature_validation.py  test_health_check.py  test_integration_pipeline.py  test_intelligent_metrics_ingestion.py  test_metrics_ingester.py  test_metrics_ingester_v2.py  test_metrics_ingestion.py  test_optuna_integration.py  test_partition_migration.py  test_plans_ingester.py  test_preprocessing_snapshots.py  test_production_feature_engineering.py  test_regimes_ingester.py  test_schema_field_mapping_alignment.py  test_schema_manager.py  test_schema_validation.py  test_trade_count.py  test_trade_reconciliation.py  test_trades_ingester.py  test_trades_validation.py  test_utils.py
(+48 files in other folders)
